# -motivatio

./: CMakeLists.txt  LICENSE  README.md  data.json  main.cpp
quotes/: art_of_war.json  einstein.json  gandhi.json  julius_caesar.json  nelson_mandela.json
src/: cli.cpp  parser.cpp  quotes.cpp
src/include/: cli.h  parser.h  quote.h  quotes.h  styles.h
